--- a/assets/gitbook/custom.css
+++ b/assets/gitbook/custom.css
@@ -262,8 +262,8 @@
     color: var(--c-danger-title);
 }
 
-.strikethrough:checked + span{
-  text-decoration:line-through
+input[type=checkbox]:checked + label.strikethrough{
+  text-decoration: line-through;
 }
 
 :root {
